<resources>
    <string name="app_name">HW02_Stopwatch</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="stopwatch_time">00:00</string>
    <string name="previous_page"><![CDATA[<<]]></string>
    <string name="next_page"><![CDATA[>>]]></string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="lap">Lap</string>
    <string name="reset">Reset</string>
    <string name="overall_time">Overall Time</string>
</resources>