<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/to_fragment_list_b"
        android:layout_width="85dp"
        android:layout_height="60dp"
        android:background="@drawable/rectangle_button"
        android:text="@string/next_page"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stopwatch_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:text="@string/stopwatch_time"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/start_b"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginEnd="35dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lap_b"
        app:layout_constraintTop_toBottomOf="@id/stop_b" />

    <Button
        android:id="@+id/stop_b"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="35dp"
        android:backgroundTint="@color/red"
        android:text="@string/stop"
        app:layout_constraintBottom_toTopOf="@id/start_b"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/reset_b"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_time_tv" />

    <Button
        android:id="@+id/lap_b"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/lap"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/start_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reset_b" />

    <Button
        android:id="@+id/reset_b"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="250dp"
        android:backgroundTint="@color/light_grey"
        android:text="@string/reset"
        app:layout_constraintBottom_toTopOf="@id/lap_b"
        app:layout_constraintEnd_toStartOf="@id/stop_b"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stopwatch_time_tv" />
</androidx.constraintlayout.widget.ConstraintLayout>